<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:src="@drawable/ic_dummy" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/bungee"
		android:gravity="center"
		android:text="@string/oops"
		android:textSize="40sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fontFamily="@font/muli_black"
		android:gravity="center"
		android:text="@string/connection_error"
		android:textSize="25sp" />

	<Button
		android:id="@+id/bt_retry"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="50dp"
		android:background="@drawable/shape_buttons"
		android:text="@string/retry" />

</LinearLayout>