<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical"
	android:padding="20dp"
	tools:context=".layouts.loginSignup.ResetPassword">

	<ImageButton
		android:id="@+id/ib_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@color/transparent"
		android:padding="5dp"
		android:src="@drawable/ic_back"
		android:tint="@color/black" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="50dp"
		android:src="@drawable/ic_forget_password" />

	<TextView
		android:id="@+id/tv_forgetPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:fontFamily="@font/bungee"
		android:gravity="center"
		android:text="@string/forgetPasswordTitle"
		android:textAlignment="center"
		android:textColor="@color/black"
		android:textSize="40sp" />

	<TextView
		android:id="@+id/tv_forgetPasswordDetail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/antic"
		android:text="@string/forgetPasswordDetail"
		android:textSize="18sp"
		android:transitionName="tran_signInContinue" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:orientation="vertical">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/ti_email"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			app:endIconMode="clear_text"
			app:endIconTint="@color/black"
			app:hintTextColor="@color/black"
			app:startIconDrawable="@drawable/ic_email"
			app:startIconTint="@color/black">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/bt_resetPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:background="@color/black"
			android:onClick="resetPassword"
			android:text="@string/resetPassword"
			android:textColor="@color/black" />

	</LinearLayout>
</LinearLayout>