<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="10dp"
	app:cardBackgroundColor="@color/softGray"
	app:cardCornerRadius="10dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/iv_postCard"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginEnd="10dp"
			android:scaleType="centerCrop" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"
			android:paddingRight="10dp">

			<TextView
				android:id="@+id/tv_titleCard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:fontFamily="@font/muli_black"
				android:maxLines="1"
				android:text="@string/title"
				android:textColor="@color/black"
				android:textSize="16dp" />

			<TextView
				android:id="@+id/tv_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:layout_weight="1"
				android:fontFamily="@font/muli"
				android:gravity="end"
				android:textColor="@color/black" />
		</LinearLayout>

		<TextView
			android:id="@+id/tv_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/muli"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/username"
			android:textColor="@color/black" />

		<TextView
			android:id="@+id/tv_descriptionCard"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:fontFamily="@font/muli"
			android:maxLines="2"
			android:text="@string/description" />

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="5dp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="10dp"
			android:background="@color/app_colorDark" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="15dp"
			android:layout_marginEnd="15dp"
			android:layout_marginBottom="10dp"
			android:orientation="horizontal">

			<ImageView
				android:id="@+id/iv_like"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_love_empty" />

			<TextView
				android:id="@+id/tv_likes"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginStart="5dp"
				android:gravity="center"
				android:text="@string/likes" />


		</LinearLayout>

	</LinearLayout>

</androidx.cardview.widget.CardView>