<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".layouts.posts.NewPost">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="230dp"
			android:background="@color/app_color"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:fontFamily="@font/bungee"
				android:text="@string/createPost"
				android:textAlignment="center"
				android:textColor="@color/black"
				android:textSize="18dp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="10dp"
				android:layout_marginEnd="40dp"
				android:orientation="vertical">

				<androidx.cardview.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="120dp"
					app:cardBackgroundColor="@color/white"
					app:cardCornerRadius="20dp">

					<ImageView
						android:id="@+id/iv_cover"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="center"
						android:layout_weight="1"
						android:src="@drawable/ic_add_image" />
				</androidx.cardview.widget.CardView>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:fontFamily="@font/muli_black"
					android:gravity="center"
					android:text="@string/addCoverImage" />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="20dp">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/ti_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/title"
				app:boxBackgroundColor="@color/transparent"
				app:counterEnabled="true"
				app:counterMaxLength="20"
				app:endIconMode="clear_text"
				app:endIconTint="@color/black"
				app:hintTextColor="@color/black">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/ti_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/location"
				app:boxBackgroundColor="@color/transparent"
				app:endIconMode="clear_text"
				app:endIconTint="@color/black"
				app:hintTextColor="@color/black"
				app:startIconDrawable="@drawable/ic_location"
				app:startIconTint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:focusable="false"
					android:inputType="text" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/ti_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:hint="@string/description"
				app:boxBackgroundColor="@color/transparent"
				app:counterEnabled="true"
				app:counterMaxLength="250"
				app:endIconMode="clear_text"
				app:endIconTint="@color/black"
				app:hintTextColor="@color/black"
				app:startIconDrawable="@drawable/ic_description"
				app:startIconTint="@color/black">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textMultiLine"
					android:maxLength="250" />
			</com.google.android.material.textfield.TextInputLayout>
		</LinearLayout>
	</LinearLayout>

	<Button
		android:id="@+id/bt_publish"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:layout_margin="20dp"
		android:background="@drawable/shape_buttons"
		android:text="@string/publish"
		android:textColor="@color/black" />

	<RelativeLayout
		android:id="@+id/rl_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/shape_loading"
		android:elevation="8dp"
		android:padding="20dp"
		android:visibility="gone">

		<ProgressBar
			android:id="@+id/progress_circular"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_centerInParent="true"
			android:indeterminateTint="@color/black" />
	</RelativeLayout>

	<ImageButton
		android:id="@+id/ib_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@color/transparent"
		android:padding="20dp"
		android:src="@drawable/ic_back"
		android:tint="@color/black" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>